# Neutronius

./: .gitignore  README.md  pyproject.toml
conf/: conf.py
plot/: plot.py
src/neutronius/: main.py
src/neutronius/core/: Agent.py  DeepAgent.py  QTable.py
src/neutronius/game/: BlackHole.py  Director.py  Electron.py  Entity.py  Game.py  Neutronius.py  Shield.py  __init__.py  game.py
